[FIX] stock_owner_restriction: Wrong qty available computation for owner and product at the same time.

--- a/stock_owner_restriction/static/description/index.html
+++ b/stock_owner_restriction/static/description/index.html
@@ -398,6 +398,10 @@ to <em>Inventory &gt; Configuration &gt; Settings</em> and ticking <em>Consignme
 <li>Select an operation type, or create a new one, and set <em>Owner Restriction</em>
 field to the desired value.</li>
 </ol>
+<p>Developers notes</p>
+<p>This module update the context dependency of product quantity available to be computed
+correctly. If you need get product quantity available for an owner yo need set the
+context key “force_restricted_owner_id”.</p>
 </div>
 <div class="section" id="usage">
 <h1><a class="toc-backref" href="#toc-entry-2">Usage</a></h1>
